adds dates on hover

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
         <title>Recipes</title>
         <meta charset="UTF-8">
-        <script src="recipes.js" defer></script>   
+        <script src="/static/recipes.js" defer></script>
+        <link href="/static/recipes.css" rel="stylesheet">
     </head>
     <body>
         <h1>RECIPES:</h1>
