--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>Login:</h1>
-        <form action="/login">
+        <form action="/login" method="POST">
             <input type="text" name="username">
             <input type="password" name="password">
             <input type="submit" value="Log in">
