--- a/login.html
+++ b/login.html
@@ -1,16 +1,12 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Login</title>
-        <meta charset="UTF-8">
-        <link href="/static/recipes.css" rel="stylesheet">
-    </head>
-    <body>
-        <h1>Login:</h1>
-        <form action="/login" method="POST">
-            <input type="text" name="username">
-            <input type="password" name="password">
-            <input type="submit" value="Log in">
-        </form>
-    </body>
-</html>
+{% extends "base.html" %}
+{% block head %}
+    <title>Login</title>
+{% endblock %}
+{% block body %}
+    <h1>Login:</h1>
+    <form action="/login" method="POST">
+        <input type="text" name="username">
+        <input type="password" name="password">
+        <input type="submit" value="Log in">
+    </form>
+{% endblock %}
